# ZAP-Quantum-Vault

./: .gitignore  .taurignore  AUDIT_COMPLETION_SUMMARY.md  BACKEND_PASSWORD_AUDIT_20250831_220651.md  BITCOIN_KEY_PASSWORD_AUDIT_REPORT_20250903_140247.md  CODE_AUDIT_EXISTING_IMPLEMENTATION.md  CODE_AUDIT_FORMATTING.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_REPORT_V2.md  CODE_AUDIT_USB_DRIVE_MANAGEMENT_20250901.md  COLD_STORAGE_DESIGN.md  COLD_STORAGE_RESEARCH.md  CRITICAL_ISSUES_ANALYSIS.md  CURRENTPASSWORD_DIAGNOSTIC_TEST_SCRIPT_20250831_220153.md  DATABASE_KEY_LOADING_ISSUE_ANALYSIS.md  DATABASE_VERIFICATION_GUIDE.md  DECRYPT_FUNCTIONALITY_AUDIT.md  DECRYPT_FUNCTIONALITY_CODE_AUDIT.md  FORMATSECTION_CODE_AUDIT_20250831_220153.md  FRONTEND_BACKEND_SYNC_AUDIT_REPORT.md  LICENSE  MODERN_TAURI_TESTING_SETUP_20250831_221538.md  NEW_CHAT_SESSION_PROMPT.md  PASSWORD_RETRIEVAL_TEST_SCRIPT_20250831_220651.js  POST_QUANTUM_CRYPTOGRAPHY_RESEARCH.md  PRIVATE_KEY_DECRYPTION_AUDIT_REPORT.md  PRODUCTION_README.md  README.md  RUN_TEST_SCRIPT_INSTRUCTIONS.md  TESTING_GUIDE.md  USB_DRIVE_DETAIL_PAGE_CODE_AUDIT_20250831_200208.md  USB_DRIVE_DETAIL_PAGE_COMPREHENSIVE_AUDIT.md  USB_DRIVE_FIXES_IMPLEMENTATION_SUMMARY.md  USB_DRIVE_FIXES_SUMMARY_20250901.md  USB_DRIVE_UI_UX_ANALYSIS_AND_IMPROVEMENTS.md  VAULT_SYSTEM_AUDIT_REPORT.md  ZAP_BLOCKCHAIN_KEY_AUDIT_REPORT.md  ZAP_BLOCKCHAIN_KEY_ENCRYPTION_AUDIT_REPORT.md  ZAP_BLOCKCHAIN_KEY_FIXES_SUMMARY_REPORT.md  ZAP_QUANTUM_VAULT_AUDIT_REPORT.md  (+32 more)
.github/workflows/: ci.yml
docs/: ADVANCED_THEMING_GUIDE.md  ADVANCED_THEMING_PLAN.md  BITCOIN_API_QUICK_REFERENCE.md  BITCOIN_CODE_AUDIT_REPORT.md  BITCOIN_INTEGRATION_EXAMPLES.md  BITCOIN_KEY_MANAGEMENT_UI_IMPLEMENTATION_PLAN.md  BITCOIN_RUST_DEVELOPMENT_GUIDE.md  CODE_AUDIT_REPORT.md  COMPREHENSIVE_CODE_AUDIT_REPORT.md  CONCEPTS_AND_ONBOARDING.md  CSS_ARCHITECTURE_AUDIT_REPORT.md  DATABASE_SCHEMA_AUDIT.md  DEV_COMMANDS_REFERENCE.md  FUTURE_IMPROVEMENTS.md  IMPLEMENTATION_PLAN.md  KEY_MANAGEMENT_ARCHITECTURE.md  LUKS_CLEANUP_AUDIT_REPORT.md  PENETRATION_TESTING.md  PERMISSIONS_SETUP.md  QUANTUM_BITCOIN_KEY_GENERATION.md  QUANTUM_FORMATTING_GUIDE.md  SECURITY_AUDIT.md  SHADCN_UI_REFERENCE.md  TAURI_V2_API_REFERENCE.md  TEST_AUDIT.md  THEME_SYSTEM_FIX.md  UPGRADE_RESEARCH.md  VAULT_ACCESS_CONTROL_ARCHITECTURE.md  VAULT_DISPLAY_ISSUE_AUDIT_AND_SOLUTION.md  VAULT_KEY_MANAGEMENT_ENHANCEMENT_PLAN.md  VAULT_KEY_MANAGEMENT_IMPLEMENTATION_PLAN.md  VAULT_MANAGEMENT_ARCHITECTURE.md  VAULT_MANAGEMENT_SOLID_IMPLEMENTATION_PLAN.md  YUBIKEY_INTEGRATION.md  pass.md
docs/audits/: AUDIT_20260625_095105.md
install/: 50-zap-vault-removable.rules  99-zap-vault-udev.rules  README.md  setup-permissions.sh  setup-privileges.sh  zap-vault-sudoers
migrations/: 20250825000001_initial_schema.sql  20250825000002_fix_datetime_formats.sql
src/: App.css  App.tsx  index.css  index.css.backup  main.tsx  test-setup.ts
src-tauri/: .env  Cargo.toml  deny.toml  tauri.conf.json
src-tauri/assets/: recovery_instructions.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 003_add_real_encryption.sql  004_add_ethereum_keys.sql  005_add_cosmos_keys.sql  006_add_zap_blockchain_keys.sql
src-tauri/src/: auth_middleware.rs  bitcoin_commands.rs  bitcoin_key_commands.rs  bitcoin_keys.rs  bitcoin_keys_clean.rs  bitcoin_keys_final.rs  bitcoin_keys_fixed.rs  bitcoin_keys_working.rs  cold_storage.rs  cold_storage_broken.rs  cold_storage_commands.rs  commands.rs  cosmos_commands.rs  cosmos_keys.rs  crypto.rs  database.rs  database_new.rs  debug_commands.rs  encryption.rs  error.rs  error_handling.rs  ethereum_commands.rs  ethereum_keys.rs  format_commands.rs  jwt.rs  jwt_commands.rs  lib.rs  logging.rs  main.rs  models.rs  quantum_crypto.rs  state.rs  test_encryption.rs  usb_password_commands.rs  validation.rs  vault_access_control.rs  vault_commands.rs  vault_commands_new.rs  vault_password_commands.rs  vault_service.rs  (+4 more)
src-tauri/src/commands/: airgap.rs  keys.rs  mod.rs  signing.rs  vault.rs  yubikey.rs
src-tauri/src/crypto/: address.rs  encryption.rs  hash.rs  hd_derivation.rs  hybrid_signing.rs  kdf.rs  mldsa87.rs  mlkem1024.rs  mnemonic.rs  mod.rs  proof_batch.rs  threshold.rs  vrf.rs
src-tauri/src/models/: airgap.rs  key.rs  mod.rs  transaction.rs  vault.rs
src-tauri/src/tests/: cold_storage_tests.rs  crypto_tests.rs  error_handling_tests.rs  jwt_tests.rs  mod.rs  validation_tests.rs
src-tauri/src/utils/: datetime.rs
src-tauri/tests/: crypto_edge_cases.rs  e2e_integration.rs
src/components/: ColdStoragePasswordsSection.tsx  ErrorBoundary.tsx  VaultPasswordsSection.tsx  theme-provider.tsx  theme-switcher.tsx
src/context/: AuthContext.tsx  ThemeContext.tsx
src/hooks/: useDriveData.ts  useFormatOperations.ts  (+2 more)
test_encryption/: Cargo.toml
(+100 files in other folders)
