[package]
name = "zap-vault"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "zap-vault"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zap_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "zap-vault"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["chrono", "json", "macros", "migrate", "runtime-tokio-rustls", "sqlite", "uuid"] }
uuid = { version = "1.18.0", features = ["v4", "serde", "rng"] }
chrono = { version = "0.4.41", features = ["clock", "serde"] }
argon2 = { version = "0.5.3", features = ["rand", "std"] }
anyhow = "1.0.99"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8.1"
secrecy = "0.8"
zeroize = "1.8"
regex = "1.10"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
log = "0.4"
dirs = "6.0.0"
blake3 = "1.8.2"
hex = "0.4.3"
sysinfo = "0.37.0"
bip39 = "2.2.0"
sha3 = "0.10.8"
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-sphincsplus = "0.7.2"
pqcrypto-traits = "0.3.5"
once_cell = "1.21.3"
nix = "0.30.1"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.9"
proc-macro-crate = "3.3.0"
lazy_static = "1.5.0"
jsonwebtoken = "9.3.1"
libc = "0.2.175"
bitcoin = "0.32.7"
secp256k1 = "0.31.1"
dotenv = "0.15.0"

