[package]
name = "zap-quantum-vault"
version = "1.0.0"
description = "Offline, air-gapped, quantum-safe key management for ZAP Blockchain"
authors = ["Alexandros Karales"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "zap_quantum_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
ml-dsa = { version = "0.1", features = ["rand_core", "getrandom"] }
ml-kem = { version = "0.3", features = ["getrandom"] }
# Classical signature for the hybrid (PQC + classical) signing path, so a break
# in either ML-DSA-87 or Ed25519 alone does not forge a hybrid signature.
ed25519-dalek = { version = "2", features = ["zeroize"] }
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
blake3 = "1"
aes-gcm = "0.10"
argon2 = "0.5"
bip39 = { version = "2", features = ["rand"] }
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
# YubiKey HMAC-SHA1 challenge-response (2FA factor mixed into the KDF).
# Pure-Rust `nusb` backend avoids a system libusb dependency on Linux/macOS.
challenge_response = { version = "0", default-features = false, features = ["nusb"] }
# Direct USB access used only to read the YubiKey OTP status report so we can
# detect which slots are programmed (and whether they require touch).
nusb = "0.2"
